Fixed alignment of location and tick icons on gym rides

--- a/app/css/gym_rides.scss
+++ b/app/css/gym_rides.scss
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-size: rem-calc(14px);
     min-height: rem-calc(16px);
-    background-position: left center;
+    background-position: rem-calc(12px) center;
     background-position-x: rem-calc(12px);
     background-image: url('/img/location.svg');
   }
@@ -24,7 +24,7 @@
       padding-left: rem-calc(40px);
       background-repeat: no-repeat;
       background-size: 16px;
-      background-position: left center;
+      background-position: center center;
       background-position-x: rem-calc(12px);
       background-image: url('/img/synced.svg');
     }
